// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScanLocation Screen Test renders the scanLocation Screen 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        color="#000000"
        name="barcode-scan"
        size={100}
      />
    </View>
    <View
      style={
        {
          "paddingTop": 30,
        }
      }
    >
      <Text>
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
    </View>
  </View>
</View>
`;

exports[`ScanLocation Screen Test renders the scanLocation Screen Manual scan enabled 1`] = `
<View
  style={
    {
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ffffffff",
        "flexDirection": "column",
        "marginBottom": 8,
        "paddingRight": 16,
      }
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
        }
      }
    >
      <TextInput
        autoCapitalize="characters"
        autoCorrect={false}
        autoFocus={true}
        keyboardType="default"
        onChangeText={[Function]}
        onSubmitEditing={[Function]}
        placeholder="[missing "en.LOCATION.MANUAL_ENTRY_BUTTON" translation]"
        selectionColor="#0071e9"
        style={
          {
            "color": "#000000",
            "flex": 1,
            "paddingLeft": 10,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        color="#000000"
        name="barcode-scan"
        size={100}
      />
    </View>
    <View
      style={
        {
          "paddingTop": 30,
        }
      }
    >
      <Text>
        [missing "en.LOCATION.SCAN_INSTRUCTION" translation]
      </Text>
    </View>
  </View>
</View>
`;
